# ImageEditor

./: .env.example  .gitignore  AGENTS.md  PROMPT_GUIDE.md  README.md  SAM_INTEGRATION.md  SDXL_DUAL_PROMPTING_GUIDE.md  pyproject.toml  requirements.txt
configs/: controlnet.yaml  default.yaml  img2img.yaml  inpaint.yaml  interior_design_prompts.yaml  prompts.yaml  sam.yaml  text2img.yaml
examples/: dual_prompt_examples.py  prompt_examples.py  prompts.md
examples/sample_inputs/: .gitkeep
examples/sample_masks/: .gitkeep
plans/: masking.md  prompts.md  v1.md
scripts/: auto_git.py  run_controlnet.py  run_img2img.py  run_inpaint.py  run_sam.py  run_sam_inpaint.py  run_text2img.py
src/: __init__.py  main.py
src/pipelines/: __init__.py  base.py  controlnet.py  controlnet_depth.py  img2img.py  inpaint.py  sam.py  text2img.py
src/services/: __init__.py  generation_service.py  image_loader.py  mask_processor.py  metadata_logger.py  prompt_builder.py  prompt_weighting.py  sam_segmentation.py
src/ui/: gradio_app.py
src/utils/: __init__.py  device.py  io.py  seed.py  validators.py
tests/: test_config.py  test_mask_processor.py  test_pipeline_interfaces.py  test_prompt_builder.py  test_prompt_weighting.py  test_sam.py  test_validators.py
